# Image_detailer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: openclaw_supervisor.env  settings.yaml
openclaw/: DUTY.md  KNOWLEDGE.md  PIPELINE.md  RUNTIME.md  SOUL.md  STYLE.md
plan/: plan.md
scripts/: bootstrap_vm.sh  run_image_analyzer.sh  run_openclaw_supervisor.sh  run_qwen_image_generation.sh  run_streamlit_app.sh  setup_image_gen.sh  setup_openclaw_supervisor.sh  setup_prompt_models.sh  setup_qwen_image_backend.sh
src/image_analyzer/: __init__.py  detailed_pipeline.py  main.py  pipeline.py  similarity.py  streamlit_app.py  supervisor_app.py
src/image_analyzer/cli/: batch.py  main.py
src/image_analyzer/config/: __init__.py  settings.py
src/image_analyzer/models/: __init__.py  schemas.py
src/image_analyzer/providers/: base.py  color.py  mediapipe_tools.py  ollama.py  optional_cv.py
src/image_analyzer/utils/: files.py  geometry.py  image_ops.py
tests/: test_batch_inputs.py  test_color_provider.py  test_detailed_pipeline.py  test_geometry.py  test_orchestration.py  test_pipeline_smoke.py
