[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-analyzer"
version = "0.1.0"
description = "Local-first measured-first image analysis pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0.0",
  "numpy>=1.26.0",
  "PyYAML>=6.0.1",
  "pydantic>=2.7.0",
  "requests>=2.31.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "streamlit>=1.45.0",
  "opencv-python>=4.9.0.80",
  "scikit-learn>=1.4.0",
  "huggingface-hub>=0.23.0",
  "ultralytics>=8.2.0",
  "mediapipe>=0.10.0",
  "pytesseract>=0.3.10",
  "transformers>=4.41.0",
  "torch>=2.2.0",
]

[project.scripts]
image-analyzer = "image_analyzer.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
